Fix for setting the os listed in metrics reporting for Blimp.

Metrics uploads from blimp engine are including OS = Linux in the System Proto instead of the desired "Blimp".

This is because the defines isn't getting set in BUILD.gn until after metrics_log.cc is built.

This change will ensure the blimp engine is uploading logs with the desired system information so they can be separate from other linux metrics logs.

BUG=613680

Review-Url: https://codereview.chromium.org/2005513002
Cr-Commit-Position: refs/heads/master@{#395170}

Former-commit-id: d599415d4e9fbb458090f9cd544a17dcd0a90a6c